[tool.poetry]
name = "mds_2025_helper_functions"
version = "1.0.1"
description = "A package to streamline common chunks of code executed in the UBC MDS program"
authors = ["Karlygash Zhakupbayeva, Samuel Adetsi, Xi Cu, Michael Hewlett"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
scikit-learn = "^1.6.1"
numpy = ">=1.22.0,<1.28.0"
pandas = "^2.2.3"
seaborn = "^0.13.2"
matplotlib = "<3.10"
tk = "^0.1.0"
scipy = "<1.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
jupyter = "^1.1.1"
myst-nb = "^1.1.2"
sphinx-autoapi = "^3.4.0"
sphinx-rtd-theme = "^3.0.2"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]                                                    # version location
branch = "main"                                      # branch to make releases of
changelog_file = "CHANGELOG.md"                      # changelog file
build_command = "pip install poetry && poetry build" # build dists 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
